--- a/Chart.yaml
+++ b/Chart.yaml
@@ -3,4 +3,4 @@ name: filebrowser
 description: A Helm chart for Kubernetes
 type: application
 version: 0.1.0
-appVersion: "2.42.5"
+appVersion: "v2.43.0"
